--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/weatherDB
 spring.datasource.username=root
 spring.datasource.password=root
