--- a/build.gradle
+++ b/build.gradle
@@ -16,17 +16,18 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    runtimeOnly 'mysql:mysql-connector-java'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.mockito:mockito-core:3.12.4'
-    implementation 'mysql:mysql-connector-java:8.0.30'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
-    implementation "joda-time:joda-time:2.2"
+    testImplementation 'org.mockito:mockito-core:3.12.4'
     testImplementation "junit:junit:4.12"
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'mysql:mysql-connector-java:8.0.30'
+    implementation 'org.projectlombok:lombok:1.18.30'
+    implementation 'joda-time:joda-time:2.2'
+    runtimeOnly 'mysql:mysql-connector-java'
 }
 
 test {
