--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@ logging:
   level:
     root: WARN
     com.example.weather.controller.WeatherController: INFO
+    com.example.weather.controller.UserController: INFO
+    com.example.weather.controller.CityController: INFO
   file:
     name: weatherLogs
     path: /
