--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,11 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
-logging.level.root=WARN
-logging.level.com.example.weather.controller.WeatherController=INFO
-logging.level.com.example.weather.controller.UserController=INFO
-logging.level.com.example.weather.controller.CityController=INFO
-logging.file.name=weatherLogs
-logging.file.path=/
+logging.level.root=ERROR
+logging.level.com.example.weather.controller=INFO
+logging.level.com.example.weather.exception.WeatherExceptionHandler=INFO
+logging.file.name=logs/application.log
+logging.pattern.console=%date %-5level - %msg%n
+logging.pattern.file=%date %-5level - %msg%n
 # Weatherbit API Key
 weatherbit.api-key=30b0a44103ab493cbfd020a0675e5153
