--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'java'
+    id 'jacoco'
     id 'checkstyle'
+    id 'org.sonarqube' version "4.4.1.3373"
     id 'org.springframework.boot' version '3.2.3'
     id 'io.spring.dependency-management' version '1.1.4'
 }
@@ -45,4 +47,10 @@ test {
 
 checkstyle {
     toolVersion '10.14.0'
+}
+
+jacocoTestReport {
+    reports {
+        xml.required = true
+    }
 }
