--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
     id 'jacoco'
     id 'checkstyle'
-    id 'org.sonarqube' version "4.4.1.3373"
+    id "org.sonarqube" version "4.4.1.3373"
     id 'org.springframework.boot' version '3.2.3'
     id 'io.spring.dependency-management' version '1.1.4'
 }
@@ -44,25 +44,15 @@ dependencies {
 
 }
 
-jacoco {
-    toolVersion = "0.8.11"
-}
-
 test {
     useJUnitPlatform()
-    finalizedBy jacocoTestReport
-}
-
-jacocoTestReport {
-    reports {
-        xml.required = false
-        csv.required = false
-        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+    jacoco {
+        enabled = true
     }
 }
 
-checkstyle {
-    toolVersion '10.14.0'
+jacoco {
+    toolVersion = "0.8.7"
 }
 
 jacocoTestReport {
@@ -71,8 +61,14 @@ jacocoTestReport {
     }
 }
 
-sonarqube {
+checkstyle {
+    toolVersion '10.14.0'
+}
+
+sonar {
     properties {
-        property 'sonar.gradle.skipCompile', 'true'
+        property "sonar.projectKey", "a9ek0_Weather"
+        property "sonar.organization", "a9ek0"
+        property "sonar.host.url", "https://sonarcloud.io"
     }
 }
