--- a/build.gradle
+++ b/build.gradle
@@ -70,5 +70,7 @@ sonar {
         property "sonar.projectKey", "a9ek0_Weather"
         property "sonar.organization", "a9ek0"
         property "sonar.host.url", "https://sonarcloud.io"
+        property "sonar.java.coveragePlugin", "jacoco"
+        property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
     }
 }
