--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 HELP.md
 .gradle
 build/
+logs/
+gradle/
+config/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
