--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,9 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/weatherDB
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql: true
+# HikariCP
+spring.datasource.hikari.maximum-pool-size=30
+# spring.jpa.show-sql: true
 logging.level.root=ERROR
 logging.level.com.example.weather.controller=INFO
 logging.level.com.example.weather.exception.WeatherExceptionHandler=INFO
@@ -12,4 +14,4 @@ logging.file.name=logs/application.log
 logging.pattern.console=%date %-5level - %msg%n
 logging.pattern.file=%date %-5level - %msg%n
 # Weatherbit API Key
-weatherbit.api-key=30b0a44103ab493cbfd020a0675e5153
+weatherbit.api-key=f7ab22d09d034652ad984001779630fa
