--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,9 @@ plugins {
     id 'jacoco'
     id 'checkstyle'
     id "org.sonarqube" version "4.4.1.3373"
-    id 'org.springframework.boot' version '3.2.3'
+    id 'org.springframework.boot' version '3.2.2'
     id 'io.spring.dependency-management' version '1.1.4'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
 group = 'com.example'
@@ -39,6 +40,8 @@ dependencies {
     implementation 'org.projectlombok:lombok:1.18.30'
     implementation 'joda-time:joda-time:2.2'
     runtimeOnly 'mysql:mysql-connector-java'
+    implementation 'org.json:json:20240303'
+
 
 }
 
@@ -72,4 +75,17 @@ sonar {
     }
 }
 
+jar {
+    duplicatesStrategy = 'exclude'
 
+    manifest {
+        attributes 'Main-Class' : 'com.example.weather.WeatherApplication'
+    }
+
+}
+
+shadowJar {
+    manifest {
+        attributes 'Main-Class' : 'com.example.weather.WeatherApplication'
+    }
+}
