--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 plugins {
     id 'java'
     id 'jacoco'
-    id 'checkstyle'
-    id "org.sonarqube" version "4.4.1.3373"
+    //id 'checkstyle'
+    //id "org.sonarqube" version "4.4.1.3373"
     id 'org.springframework.boot' version '3.2.2'
     id 'io.spring.dependency-management' version '1.1.4'
-    id 'com.github.johnrengelman.shadow' version '8.1.1'
+    //id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
 group = 'com.example'
@@ -18,6 +18,7 @@ java {
 
 repositories {
     mavenCentral()
+    gradlePluginPortal()
 }
 
 dependencies {
@@ -62,18 +63,11 @@ jacocoTestReport {
     }
 }
 
-checkstyle {
+/*checkstyle {
     toolVersion '10.14.0'
-}
+}*/
 
-sonar {
-    properties {
-        property "sonar.projectKey", "a9ek0_Weather"
-        property "sonar.organization", "a9ek0"
-        property "sonar.host.url", "https://sonarcloud.io"
-        property "sonar.token", System.getenv("SONAR_SECRET")
-    }
-}
+
 
 jar {
     duplicatesStrategy = 'exclude'
@@ -84,8 +78,9 @@ jar {
 
 }
 
+/*
 shadowJar {
     manifest {
         attributes 'Main-Class' : 'com.example.weather.WeatherApplication'
     }
-}
+}*/
